--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,98 @@
 /* ===== google fonts ===== */
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
 
 /* ===== base style ===== */
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Source Sans Pro', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
-
-
 /* ===== pre-define css ===== */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #f46036;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+h3,
+h4 {
+  font-size: 1.8rem;
+}
+
+h5,
+h6 {
+  font-size: 1.2rem;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+a:hover {
+  color: unset;
+}
+
+ul {
+  margin: 0;
+  list-style: none;
+}
+
+.section_title {
+  color: #f46036;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.section_subtitle {
+  counter-reset: #3aaed8;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.section_description {
+  color: #b9baa3;
+  font-size: 0.9rem;
+  line-height: 30px;
+}
+
+section {
+  padding: 50px 0px;
+}
+
+.btn {
+  padding: 7px 15 px;
+  background: #f46036;
+  color: #d6d5c9;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  color: #d6d5c9;
+  background: #f45f36e0;
+}
+
+/* ===== pre-define css responsiveness ===== */
+@media only screen and (max-width: 768px) {
+  section {
+    padding: 30px 0px;
+  }
+
+  .section_title {
+    font-size: 1.6rem;
+  }
+
+  .section_subtitle {
+    font-size: 1.1rem;
+  }
+}
