--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -44,3 +44,63 @@
 .header_top_right a:hover {
   color: #d6d5c9;
 }
+
+/* ====== middle header style ====== */
+.header_middle {
+  padding: 20px 0px;
+}
+
+.logo h1 a span {
+  font-size: 1.5rem;
+}
+
+.logo h1 a i {
+  font-size: 2.2rem;
+}
+
+.logo h1 a {
+  text-decoration: none;
+  color: #f46036;
+  font-weight: 700;
+}
+
+.logo h1 {
+  line-height: 1.5rem;
+}
+
+.header_location span i {
+  font-size: 2.2rem;
+  color: #f46036;
+}
+
+.header_location-content h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #f46036;
+}
+
+.header_location-content h6 {
+  font-weight: 500;
+}
+
+.header_btn {
+  background: #f46036 !important;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.header_btn a {
+  display: flex;
+  align-items: center;
+  column-gap: 0.4rem;
+  text-decoration: none;
+  color: #d6d5c9;
+  justify-content: flex-end;
+  font-size: 0.9rem;
+}
+
+.header_btn a:hover {
+  color: #d6d5c9;
+}
